--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^2.6.1",
-    "discord.js": "^12.5.0"
+    "discord.js": "^12.5.0",
+    "node-fetch": "^2.6.1"
   }
 }
